--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -51,7 +51,7 @@ body {
   }
 
   .btn.btn-secondary {
-    @apply px-5 py-2 text-gray-100 transition-colors duration-150 rounded-lg bg-white text-gray-950 hover:bg-gray-200 disabled:opacity-75 dark:bg-white/5 dark:text-white dark:hover:bg-white/10 ring-1 ring-gray-950/10 dark:ring-white/20;
+    @apply px-5 py-2 text-gray-100 transition-colors duration-150 rounded-lg bg-white text-gray-950 hover:bg-gray-200 disabled:opacity-75 ring-1 ring-gray-950/10;
   }
   .btn.btn-secondary:disabled {
     @apply bg-gray-200;
@@ -62,22 +62,21 @@ body {
   }
 
   .pagination ul {
-    @apply flex;
-    list-style: none;
+    @apply flex text-center list-none;
   }
 
-  .pagination ul li button {
+  .pagination ul li a {
     min-width: 40px;
   }
-  .pagination ul li button.pagination-link {
-    @apply relative block rounded bg-transparent px-3 py-1.5 text-sm text-neutral-600 transition-all duration-300 hover:bg-neutral-100 dark:text-white dark:hover:bg-neutral-700 dark:hover:text-white;
+  .pagination ul li a.pagination-link {
+    @apply relative block rounded bg-transparent px-3 py-1.5 text-sm text-neutral-600 transition-all duration-300 hover:bg-neutral-100;
   }
 
-  .pagination ul li button.current {
+  .pagination ul li a.current {
     @apply relative block rounded bg-blue-100 px-3 py-1.5 text-sm font-medium text-blue-700 transition-all duration-300;
   }
 
-  .pagination ul li button.current span {
+  .pagination ul li a.current span {
     @apply absolute -m-px h-px w-px overflow-hidden whitespace-nowrap border-0 p-0 [clip:rect(0,0,0,0)];
   }
 
@@ -89,15 +88,16 @@ body {
     @apply border-[#DAF4E3] text-[#16A34A] bg-[#F0FDF4];
   }
 
-  .role.administrador {
+  .role.administrador,
+  .role.super-admin {
     @apply border-[#DDEEF6] text-[#0B88A0] bg-[#E8F7FF];
   }
 
   .tableContainer {
-    @apply mt-8 bg-white shadow-sm ring-1 ring-gray-950/5 dark:divide-white/10 dark:bg-gray-900 dark:ring-white/10;
+    @apply mt-8 bg-white shadow-sm ring-1 ring-gray-950/5;
   }
 
   .tableContainer .inputSearch {
-    @apply block w-64 rounded-lg border dark:border-none dark:bg-neutral-600 py-2 pl-10 pr-4 text-sm focus:border-blue-400 focus:outline-none focus:ring-1 focus:ring-blue-400;
+    @apply block w-64 rounded-lg border py-2 pl-10 pr-4 text-sm focus:border-blue-400 focus:outline-none focus:ring-1 focus:ring-blue-400;
   }
 }
