--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,7 +43,7 @@ body {
   }
 
   .input {
-    @apply w-full border-gray-300 focus:border-gray-500 focus:ring-gray-500 rounded-md shadow-sm;
+    @apply bg-white py-2 px-3 leading-6 w-full border border-gray-300 focus:border-gray-500 focus:ring-gray-500 rounded-md shadow-sm;
   }
 
   .input-file {
