--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,38 +2,88 @@
 @tailwind components;
 @tailwind utilities;
 
-*,
-:before,
-:after,
-:root {
-  --vf-primary: #212226;
-  --vf-primary-darker: #09090a;
-  --vf-danger: #ef4444;
-  --vf-danger-lighter: #fee2e2;
-  --vf-success: #10b981;
-  --vf-success-lighter: #d1fae5;
+@layer base {
+  :root {
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
 
-  --vf-gray-50: #f9fafb;
-  --vf-gray-100: #f3f4f6;
-  --vf-gray-200: #e5e7eb;
-  --vf-gray-300: #d1d5db;
-  --vf-gray-400: #9ca3af;
-  --vf-gray-500: #6b7280;
-  --vf-gray-600: #4b5563;
-  --vf-gray-700: #374151;
-  --vf-gray-800: #1f2937;
-  --vf-gray-900: #111827;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+
+    --ring: 222.2 84% 4.9%;
+
+    --radius: 0.5rem;
+  }
+
+  .dark {
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+
+    --primary: 210 40% 98%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+
+    --secondary: 217.2 32.6% 17.5%;
+    --secondary-foreground: 210 40% 98%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+
+    --ring: 212.7 26.8% 83.9%;
+  }
 }
 
-body {
-  overflow-x: hidden;
-  overflow-y: auto;
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
 @layer base {
   body {
     @apply bg-gray-50;
+    overflow-x: hidden;
+    overflow-y: auto;
   }
+
   .router-link-active {
     background-color: #6b7280;
   }
