add multiselect and date select week

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -168,7 +168,16 @@
   .tableContainer table td {
     @apply px-6 py-3;
   }
+}
 
+.multiselect__tags .multiselect__tag {
+  background: #E9ECEF;
+  color: #343A40;
+  font-weight: 500;
+}
+
+.multiselect__tags .multiselect__tag i.multiselect__tag-icon::after {
+  color: #343A40;
 }
 
 .swal2-modal .swal2-actions .swal2-deny {
