--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -170,6 +170,36 @@
   }
 }
 
+.btn-primary {
+  background: linear-gradient(180deg, #FABEB3 0%, #F06F38 9.82%, #ED3900 100%);
+  border: 1px solid #C5150E;
+  border-radius: 6px;
+  color: white;
+}
+
+.btn-primary:hover {
+  background: linear-gradient(180deg, #FABEB3 0%, #FB9773 9.82%, #ED3900 100%);
+}
+
+.btn-primary:active {
+  background: linear-gradient(180deg, #B73A2A 0%, #ED3900 9.82%, #F06F38 100%);
+}
+
+.btn-secondary {
+  background: linear-gradient(180deg, #F6F6F6 0%, #FFFFFF 8%, #F2F2F2 100%);
+  border: 1px solid #C7C7C7;
+  border-radius: 6px;
+  color: #ED3900;
+}
+
+.btn-secondary:hover {
+  background: linear-gradient(180deg, #F6F6F6 0%, #FFFFFF 8%, #F2F2F2 100%);
+}
+
+.btn-secondary:active {
+  background: linear-gradient(180deg, #C2C2C2 0%, #DEDEDE 13.5%, #ECECEC 100%);
+}
+
 .multiselect__tags .multiselect__tag {
   background: #E9ECEF;
   color: #343A40;
