change menu color

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -202,7 +202,7 @@
 
 .menu-element.active {
   background: #F0F2F5;
-  color: #0B0B0E;
+  color: #ED3900;
 }
 
 .multiselect__tags .multiselect__tag {
