--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -103,76 +103,6 @@ body {
   @apply text-xs size-8;
 }
 
-.menu-group {
-  @apply cursor-pointer text-neutral-800
-}
-
-.menu-group svg {
-  color: var(--p-primary-color);
-}
-
-.menu-element {
-  @apply text-neutral-800 inline-flex relative items-center py-[10px] w-full text-sm font-medium rounded-md transition duration-400 ease-in-out ps-2;
-}
-
-.menu-element:hover {
-  @apply bg-gray-200;
-}
-
-.menu-element.active {
-  @apply text-slate-50 bg-(--p-primary-color);
-}
-
-.menu-element svg{
-  @apply text-(--p-primary-color);
-}
-
-.menu-element.active svg{
-  @apply text-slate-50;
-}
-.menu-element.active:hover svg{
-  @apply text-slate-50;
-}
-
-.menu-element:hover svg{
-  @apply text-(--p-primary-color);
-}
-
-.dark .menu-group {
-  @apply cursor-pointer text-slate-300
-}
-
-.dark .menu-group svg {
-  @apply text-(--p-primary-color);
-}
-
-.dark .menu-element {
-  @apply text-slate-300
-}
-
-.dark .menu-element:hover {
-  @apply bg-gray-600
-}
-
-.dark .menu-element.active {
-  @apply text-slate-50 bg-(--p-primary-color);
-}
-
-.dark .menu-element svg{
-  @apply text-(--p-primary-color);
-}
-
-.dark .menu-element.active svg{
-  @apply text-slate-50
-}
-.dark .menu-element.active:hover svg{
-  @apply text-slate-50
-}
-
-.dark .menu-element:hover svg{
-  @apply text-(--p-primary-color);
-}
-
 .dark .mention {
   @apply text-slate-300 bg-gray-500;
 }
@@ -211,4 +141,82 @@ body {
 
 .p-toast {
   z-index: 300000;
+}
+
+.material-fill {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+.aside-left-menu .p-accordionpanel {
+  @apply !border-none !bg-gray-50 dark:!bg-[#2F3349];
+}
+
+.aside-left-menu .p-accordionheader {
+  @apply !w-full !pt-2 pb-0 !px-2 !bg-gray-50 !font-normal !text-neutral-800 dark:!bg-[#2F3349] dark:!text-gray-100;
+}
+
+.aside-left-menu .p-accordionheader svg {
+  @apply float-right;
+}
+
+.aside-left-menu .p-accordioncontent-content {
+  @apply !p-0 !bg-gray-50 dark:!bg-[#2F3349];
+}
+
+.aside-left-menu .menu-element {
+  @apply text-neutral-800 inline-flex relative items-center py-[10px] w-full text-sm font-medium leading-1 rounded-md transition duration-400 ease-in-out ps-2;
+}
+
+.aside-left-menu .menu-element:hover {
+  @apply bg-gray-200;
+}
+
+.aside-left-menu .menu-element.active {
+  @apply text-slate-50 bg-(--p-primary-color);
+}
+
+.aside-left-menu .menu-element span[class*="material-"] {
+  @apply text-(--p-primary-color);
+}
+
+.aside-left-menu .menu-element.active span[class*="material-"]{
+  @apply text-slate-50;
+}
+.aside-left-menu .menu-element.active:hover span[class*="material-"]{
+  @apply text-slate-50;
+}
+
+.aside-left-menu .menu-element:hover span[class*="material-"]{
+  @apply text-(--p-primary-color);
+}
+
+.dark .aside-left-menu .menu-element {
+  @apply text-slate-300
+}
+
+.dark .aside-left-menu .menu-element:hover {
+  @apply bg-gray-600
+}
+
+.dark .aside-left-menu .menu-element.active {
+  @apply text-slate-50 bg-(--p-primary-color);
+}
+
+.dark .aside-left-menu .menu-element span[class*="material-"]{
+  @apply text-(--p-primary-color);
+}
+
+.dark .aside-left-menu .menu-element.active span[class*="material-"]{
+  @apply text-slate-50
+}
+.dark .aside-left-menu .menu-element.active:hover span[class*="material-"]{
+  @apply text-slate-50
+}
+
+.dark .aside-left-menu .menu-element:hover span[class*="material-"]{
+  @apply text-(--p-primary-color);
 }
